2010-07-07  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Darin Adler.

        AX: TextArea should return AXSelectedTextRange of 0,0 if the cursor is not in the text area
        https://bugs.webkit.org/show_bug.cgi?id=41810

        * DumpRenderTree/mac/AccessibilityUIElementMac.mm:
        (AccessibilityUIElement::selectedTextRange):

2010-07-07  Martin Robinson  <mrobinson@igalia.com>

        Unreviewed.

        Build fix after r62700.

        * GNUmakefile.am: Update the source list to reflect the new TestNetscapePlugIn
        source file locations.

2010-07-07  Ojan Vafai  <ojan@chromium.org>

        Reviewed by David Levin.

        change --exit-after-n-crashes to --exit-after-n-crashes-or-timeouts
        https://bugs.webkit.org/show_bug.cgi?id=41814

        * BuildSlaveSupport/build.webkit.org-config/master.cfg:
        * Scripts/old-run-webkit-tests:

2010-07-07  Ojan Vafai  <ojan@chromium.org>

        Reviewed by David Levin.

        add --exit-after-n-crashes to run-webkit-tests
        https://bugs.webkit.org/show_bug.cgi?id=41811

        Change the bots at build.webkit.org to use --exit-after-n-crashes
        instead of --exit-after-n-failures since we want to be able to have
        more than 20 failures on those bots, but more than 20 crashes means
        something should be rolled out.

        * Scripts/old-run-webkit-tests:
        * Scripts/webkitpy/layout_tests/run_webkit_tests.py:

2010-07-07  Brian Weinstein  <bweinstein@apple.com>

        Fix the Windows build by removing win/TestNetscapePlugin/main.cpp from the
        TestNetscapePlugin project, because this was removed from the tree.

        * DumpRenderTree/TestNetscapePlugIn/win/TestNetscapePlugin.vcproj:

2010-07-07  Anders Carlsson  <andersca@apple.com>

        Reviewed by Simon Fraser.

        Unify Mac and Windows TestNetscapePlugin main.cpp files
        https://bugs.webkit.org/show_bug.cgi?id=41798
        
        * DumpRenderTree/DumpRenderTree.sln: